# nxs_analysis_tools

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pylint_out.rst  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  tests.yml
docs/source/: api.rst  conf.py  index.md  quickstart.ipynb
docs/source/_static/css/: custom.css
docs/source/examples/: animations.ipynb  bootstrap_estimates.ipynb  extracting_an_order_parameter.ipynb  extracting_delta_pdf.ipynb  fitting_chess_data.ipynb  fitting_linecuts.ipynb  generate_example_data_pairdistribution.ipynb  generate_example_data_plot_slice.ipynb  generate_example_datasets.ipynb  generate_nxrefine_example_data.ipynb  generate_ordparam_example_datasets.ipynb  index.md  loading_chess_data.ipynb  magdata.csv  performing_HHL_linecut.ipynb  plotting.ipynb  processing_data.ipynb  reading_data.ipynb  units_and_conversions.ipynb  using_plot_slice.ipynb  using_scissors.ipynb  using_symmetrizer.ipynb  working_with_chess_data.ipynb
docs/source/examples/.virtual_documents/: fitting_chess_data.ipynb  working_with_chess_data.ipynb
docs/source/examples/example_data/nxrefine/CsV3Sb5/sample_1a/: CsV3Sb5_100.nxs  CsV3Sb5_15.nxs  CsV3Sb5_300.nxs
docs/source/examples/example_data/order_parameter/nxrefine/CsV3Sb5/sample_1b/: CsV3Sb5_104.nxs  CsV3Sb5_128.nxs  CsV3Sb5_15.nxs  CsV3Sb5_153.nxs  CsV3Sb5_177.nxs  CsV3Sb5_202.nxs  CsV3Sb5_226.nxs  CsV3Sb5_25.nxs  CsV3Sb5_251.nxs  CsV3Sb5_275.nxs  CsV3Sb5_300.nxs  CsV3Sb5_35.nxs  CsV3Sb5_45.nxs  CsV3Sb5_55.nxs  CsV3Sb5_65.nxs  CsV3Sb5_75.nxs  CsV3Sb5_80.nxs
docs/source/examples/example_data/plot_slice_data/: sym_hkli.nxs
src/_meta/: __init__.py
src/magentropy/: __init__.py  _calculations.py  _classvars.py  _grouping.py  _pint_utils.py  _plotting.py  _smoothing.py  _validation.py  errors.py  magentro.py  typedefs.py
src/nxs_analysis_tools/: __init__.py  chess.py  datareduction.py  datasets.py  fitting  fitting.py  lineartransformations.py  pairdistribution.py
tests/: test_accurate_highlight.py  test_chess.py  test_chess_fitting.ipynb  test_chess_fitting.py  test_datareduction.py  test_ellipsoidal_window.py  test_fitting.py  test_lmfit.py  test_loading.py  test_mask_plotting.py  test_pairdistribution.py  test_plot_slice.py  test_plot_slice_axes_types.py  test_plot_slice_with_ndarray.py  test_rotate_data.py  test_sum_axis.py  test_symmetrizer_rectangular_plane.py  two_atom_alloy.ipynb  two_atom_alloy_pdf_class.ipynb  vacancies.ipynb  vacancies_pdf_class.ipynb
